# rust.webassembly

./: Cargo.toml  README.md  index.html
src/: game.rs  main.rs
